   workers processes all elements (and the other workers will not be used).
   If 2.0, then each worker will process two chunks, and so on.  If above
   option is not set, then .options.multicore = list(preschedule = <logical>))
   which is defined by doParallel, is used to mean scheduling = preschedule.
   If that is not set, then scheduling = 1.0 is used by default.

BUG FIXES:

 o Using a nested foreach() call would incorrectly produce an error on
   not being able to locate the iterator variable of the inner-most
   foreach() as a global variable.

 o If a foreach() call would result in an error, the error thrown would
   report on "object 'expr' not found" and not the actually error message.


Version: 0.4.0 [2017-03-13]

SIGNIFICANT CHANGES:

 o SPEED / LOAD BALANCING: The doFuture %dopar% backend now processes all
   elements in chunks such that each backend worker will process a subset
   of data at once (and only once).  This significantly speeds up
   processing time when iterating over a large number of elements that
   each has short a processing time.
  
GLOBALS:

 o For consistency, globals and packages are now identified the same way
   as they are when using regular futures.
 
SOFTWARE QUALITY:
	 
 o Now the package tests future.batchtools with foreach by itself, in
   combination with plyr (parallel = TRUE) as well as with
   BiocParallel::bplapply() and friends.  Similar tests are already done
   using future.BatchJobs.

 o Added test for foreach::times() %dopar% { ... }.  Especially, it is
   now tested that global variables are properly identified.  Note that
   times() does not allow you to specify neither '.export' nor '.packages'
   so it is not really designed for processing in external R process.
   Having said this, times() does indeed work also in those cases when
   used with doFuture because it internally handles this automatically.

 o ROBUSTNESS: The package redundancy tests (not run by 'R CMD check'; needed